<resources>
    <string name="app_name">MyApp</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="create_ride">Create Ride</string>
    <string name="book_ride">Book Ride</string>
    <string name="ride_history">Ride History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_a_ride">Create a Ride</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="date_dd_mm_yyyy">Date (DD-MM-YYYY)</string>
    <string name="time_hh_mm_am_pm">Time (HH:MM AM/PM)</string>
    <string name="available_seats">Available Seats</string>
    <string name="seats">Seats</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
</resources>